<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyDashboard</string>
    <string name="hello_world">Hello world!</string>    
    <string name="description_logo">Demo</string>
    <string name="description_about">About</string>
    <string name="description_home">Home</string>
    
    <string name="description_feature1">Feature 1</string>
    <string name="description_feature2">Feature 2</string>
    <string name="description_feature3">Feature 3</string>
    <string name="description_feature4">Feature 4</string>
    <string name="description_feature5">Feature 5</string>
    <string name="description_feature6">Feature 6</string>
    <string name="title_about">About</string>
    <string name="title_home">Home</string>
    
    
    <string name="title_feature1">Feature 1</string>
    <string name="title_feature2">Feature 2</string>
    <string name="title_feature3">Feature 3</string>
    <string name="title_feature4">Feature 4</string>
    <string name="title_feature5">Feature 5</string>
    <string name="title_feature6">Feature 6</string>
    <string name="default_intro">This is the default content view for an activity. Be sure to change your activity\'s onCreate method. Use setContentView on a custom layout.</string>
    <string name="feature1_intro">Feature 1 content goes here.</string>
    <string name="feature2_intro">Feature 2 content goes here.</string>
    <string name="feature3_intro">Feature 3 content goes here.</string>
    <string name="feature4_intro">Feature 4 content goes here.</string>
    <string name="feature5_intro">Feature 5 content goes here.</string>
    <string name="feature6_intro">Feature 6 content goes here.</string>
    <string name="about_intro">This activity shows you the detail information about this system.</string>
   

    <!-- Patients -->
    <string name="partient_home">Home</string>
    <string name="partient_sleep">Sleep</string>
    <string name="partient_restroom">Restroom</string>
    <string name="partient_temperature">Temperature</string>
    <string name="partient_location">Location</string>
    
    <string name="view_patient_list">View Patient List</string>
    
    <string name="title_activity_f2_activity__sleep">F2Activity_Sleep</string>
    <string name="today">Today</string>
    <string name="this_week">This Week</string>
    <string name="this_month">This Month</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_f2_temperature">F2RmTemperatureActivity</string>
    
    
    <!-- error -->
    <string name="server_might_be_down">Server might be down.</string>
    <string name="check_internet_connection">Please check your Internet connection</string>
    <string name="connection_timeout_exception">Connection Time Out!</string>
    <string name="socket_timeout_exception">Data Retrieving Time Out!</string>
    <string name="connection_exception">Cannot connect to server!</string>
    
    <!-- Retry -->
    <string name="tap_to_retry">Tap to retry...</string>
    
    <!-- Building Floor -->
    <string name="floor_1">Floor 1</string>
    <string name="floor_2">Floor 2</string>
    <string name="floor_3">Floor 3</string>
    <string name="view_all_floors">View All Floors</string>
    
    
    <!-- Search -->
    <string name="search_label">Search</string>
    <string name="search_hint">Search Patient Name/Age</string>
    
    <!-- Login -->
    <string name="login">Log In</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="username">Username</string>
    <string name="password">Password</string>

    
    <!-- Location -->
    <string name="lastestLocation">Lastest Location</string>
    <string name="detectedTime">Detected Time</string>
    <string name="currentTime">Current Time</string>
    <string name="roomNumber">Room Number</string>
    
</resources>
