<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout 
        android:id="@+id/frag"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
        
    <LinearLayout 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"            
            android:orientation="horizontal">            
        
        <Button
            android:id="@+id/btnToday"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="doClick"                       
            android:text="@string/today" />

        <Button
            android:id="@+id/btnWeek"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:onClick="doClick"                     
            android:text="@string/this_week" />

        <Button
            android:id="@+id/btnMonth"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="doClick"                        
            android:text="@string/this_month" />
        
    </LinearLayout>
    


</LinearLayout>
